<resources>
    <string name="app_name">DivvyUp</string>
    <string name="group_password">Group password</string>
    <string name="to_do">To Do</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="edit">edit</string>
    <string name="assigned">assigned</string>
    <string name="frequency">frequency</string>
    <string name="chore">chore</string>
    <string name="cancel">Cancel</string>
    <!--    <string name="chore">chore</string>-->
    <string name="repeating">repeating</string>
    <string name="save">Save</string>
    <string name="deletes_chore">Deletes Chore</string>
    <string name="login">login</string>
    <string name="username">username</string>
    <string name="groups">groups</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="fri">Fri</string>
    <string name="thu">Thu</string>
    <string name="sun">Sun</string>
    <string name="sat">Sat</string>
    <string name="mon">Mon</string>
    <string name="add">add</string>
    <string name="group_code">Group Code</string>
    <string name="add_group">Add Group</string>
    <string name="create_new_group">Create New Group</string>
    <string name="group_id">group_Id</string>
    <string name="groupname">groupName</string>
    <string name="group_name">group_name</string>
    <string name="name">Name</string>
    <string-array name="users_array">
        <item>User 1</item>
        <item>User 2</item>
        <item>User 3</item>
        <item>User 4</item>
    </string-array>
</resources>